// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`golden frames portland fixture at lg 120x40: lg 120x40 1`] = `
"┌─locations──────────────┐Portland  45.5°, -122.7°  synced just now                                                     
│● Portland ☀ 65°        │                                                                                              
│                        │┌─main · lg──────────────────────────────────────────────────────────────────────────────────┐
│                        ││ ╭━━━╮ ╭━━━╮°                  humidity 79%                      dew pt   58°               │
│                        ││ ┃╭━━╯ ┃╭━━╯                   pressure 1015 hPa                 gusts    14 mph            │
│                        ││ ┃╰━━╮ ┃╰━━╮                   uv       --                       vis      --                │
│                        ││ ┃╭━╮┃ ╰━━╮┃                   sunrise  6:22 AM                  sunset   8:03 PM           │
│                        ││ ┃╰━╯┃ ╭━━╯┃                                                                                │
│                        ││ ╰━━━╯ ╰━━━╯                                                                                │
│                        ││ ☀ Clear sky · feels like 64°                                                               │
│                        ││                                                                                            │
│                        ││ ── next 48h ────────────────────────────────────────────────────────────────────────────── │
│                        ││ temp ▃▄▄▅▆▇▇██████████▇▇▆▅▄▄▄▄▄▄▄▃▃▃▂▂▂▂▁▁▁▂▂▃▃▄▄▅▅▆▆▆▇▇▇██▇▇▇▆▆▅▄▄▃▂▂▂▂▂▁▁▁▁▁▁▁▁▁▂▂▁▂▂▂▃  │
│                        ││ rain ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  │
│                        ││      10a           6p            2a            10a           6p            2a              │
│                        ││                                                                                            │
│                        ││ ── 7 day ───────────────────────────────────────────────────────────────────────────────── │
│                        ││                                                                                            │
│                        ││ Mon ☁ 59°░░░░░░███████████████████████████████████████████████████████████████92°          │
│                        ││ Tue ☁ 61°░░░░░░░░░░░███████████████████████████████████████████████░░░░░░░░░░░87°          │
│                        ││ Wed ☀ 60°░░░░░░░░████████████████████████████████████████████████░░░░░░░░░░░░░85°          │
│                        ││ Thu ☀ 59°░░░░░░███████████████████████████████████████████████░░░░░░░░░░░░░░░░84°          │
│                        ││ Fri ☁ 58°░░░░░██████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░81°          │
│                        ││ Sat ☂ 57°░░█████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░74° ☂ 65%    │
│                        ││ Sun ☂ 56°██████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░72° ☂ 40%    │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        │└────────────────────────────────────────────────────────────────────────────────────────────┘
│                        │                                                                                              
└────────────────────────┘/ search · r refresh · u units · [ ] locations · ? help · q quit                              
"
`;

exports[`golden frames portland fixture at md 80x24: md 80x24 1`] = `
"Portland  45.5°, -122.7°  synced just now                                       
                                                                                
┌─main · md────────────────────────────────────────────────────────────────────┐
│ ╭━━━╮ ╭━━━╮°                  humidity 79%               dew pt   58°        │
│ ┃╭━━╯ ┃╭━━╯                   pressure 1015 hPa          gusts    14 mph     │
│ ┃╰━━╮ ┃╰━━╮                   uv       --                vis      --         │
│ ┃╭━╮┃ ╰━━╮┃                   sunrise  6:22 AM           sunset   8:03 PM    │
│ ┃╰━╯┃ ╭━━╯┃                                                                  │
│ ╰━━━╯ ╰━━━╯                                                                  │
│ ☀ Clear sky · feels like 64°                                                 │
│                                                                              │
│ ── next 48h ──────────────────────────────────────────────────────────────── │
│ temp ▃▄▅▆▇█████████▇▇▆▅▄▄▄▄▄▃▃▃▂▂▂▂▁▁▂▂▃▄▄▅▆▆▇▇▇██▇▇▇▆▅▄▄▃▂▂▂▁▁▁▁▁▁▁▁▁▁▁▂▂▃  │
│ rain ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  │
│      10a        5p         1a         8a         4p         12a        7a    │
│                                                                              │
│ ── 7 day ─────────────────────────────────────────────────────────────────── │
│                                                                              │
│ Mon ☁ 59°░░██████████████████████92°  Tue ☁ 61°░░░░████████████████░░░░87°   │
│ Wed ☀ 60°░░░████████████████░░░░░85°  Thu ☀ 59°░░████████████████░░░░░░84°   │
│ Fri ☁ 58°░░██████████████░░░░░░░░81°  Sat ☂ 57°░███████████░░░░░░░░░░░░74°   │
└──────────────────────────────────────────────────────────────────────────────┘
                                                                                
/ search · r refresh · u units · [ ] locations · ? help · q quit                
"
`;

exports[`golden frames portland fixture at sm 60x20: sm 60x20 1`] = `
"Portland · 9:15 AM · sm                                     
                                                            
┌─main · sm────────────────────────────────────────────────┐
│ 65° Clear sky · feels like 64°                           │
│ 7 mph N · humidity 79%                                   │
│                                                          │
│ ── next 12h ──────────────────────────────────────────── │
│ temp ▁▁▁▃▃▃▅▅▅▇▇▇███████████████▇▇▇▆▆▆▄▄▄                │
│ rain ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░                │
│      10a   12p   2p    4p    6p    8p                    │
│                                                          │
│ ── 7 day ─────────────────────────────────────────────── │
│                                                          │
│ Mon ☁ 59°░██████92°         Tue ☁ 61°░█████░87°          │
│ Wed ☀ 60°░█████░85°         Thu ☀ 59°░████░░84°          │
│ Fri ☁ 58°█████░░81°         Sat ☂ 57°████░░░74° ☂ 65%    │
│ Sun ☂ 56°███░░░░72° ☂ 40%                                │
└──────────────────────────────────────────────────────────┘
                                                            
r refresh · u units · ? help · q quit                       
"
`;

exports[`golden frames portland fixture at xs 40x12: xs 40x12 1`] = `
"Portland · 9:15 AM · xs                 
                                        
┌─main · xs────────────────────────────┐
│ 65° Clear sky · fl 64°               │
│                                      │
│ ▁▃▅▇█████▇▆▄                         │
│                                      │
│ Mon☁92° Tue☁87° Wed☀85° Thu☀84° Fri… │
│                                      │
└──────────────────────────────────────┘
                                        
r u ? q                                 
"
`;

exports[`golden frames portland fixture at md 80x24 with 24h clock and mixed units: md 80x24 mixed 24h 1`] = `
"Portland  45.5°, -122.7°  synced just now                                       
                                                                                
┌─main · md────────────────────────────────────────────────────────────────────┐
│ ╱╭╮╱ ╭━━━╮°                   humidity 79%               dew pt   15°        │
│ ╭╯┃╱ ┃╭━╮┃                    pressure 1015 hPa          gusts    14 mph     │
│ ╰╮┃╱ ┃╰━╯┃                    uv       --                vis      --         │
│ ╱┃┃╱ ┃╭━╮┃                    sunrise  06:22             sunset   20:03      │
│ ╭╯╰╮ ┃╰━╯┃                                                                   │
│ ╰━━╯ ╰━━━╯                                                                   │
│ ☀ Clear sky · feels like 18°                                                 │
│                                                                              │
│ ── next 48h ──────────────────────────────────────────────────────────────── │
│ temp ▃▄▅▆▇█████████▇▇▆▅▄▄▄▄▄▃▃▃▂▂▂▂▁▁▂▂▃▄▄▅▆▆▇▇▇██▇▇▇▆▅▄▄▃▂▂▂▁▁▁▁▁▁▁▁▁▁▁▂▂▃  │
│ rain ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  │
│      10         17         01         08         16         00         07    │
│                                                                              │
│ ── 7 day ─────────────────────────────────────────────────────────────────── │
│                                                                              │
│ Mon ☁ 15°░░██████████████████████34°  Tue ☁ 16°░░░░████████████████░░░░30°   │
│ Wed ☀ 16°░░░████████████████░░░░░30°  Thu ☀ 15°░░████████████████░░░░░░29°   │
│ Fri ☁ 15°░░██████████████░░░░░░░░27°  Sat ☂ 14°░███████████░░░░░░░░░░░░23°   │
└──────────────────────────────────────────────────────────────────────────────┘
                                                                                
/ search · r refresh · u units · [ ] locations · ? help · q quit                
"
`;

exports[`golden frames portland fixture at sm 60x20 with 24h header clock and mixed units: sm 60x20 mixed 24h 1`] = `
"Portland · 09:15 · sm                                       
                                                            
┌─main · sm────────────────────────────────────────────────┐
│ 18° Clear sky · feels like 18°                           │
│ 7 mph N · humidity 79%                                   │
│                                                          │
│ ── next 12h ──────────────────────────────────────────── │
│ temp ▁▁▁▃▃▃▅▅▅▇▇▇███████████████▇▇▇▆▆▆▄▄▄                │
│ rain ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░                │
│      10    12    14    16    18    20                    │
│                                                          │
│ ── 7 day ─────────────────────────────────────────────── │
│                                                          │
│ Mon ☁ 15°░██████34°         Tue ☁ 16°░█████░30°          │
│ Wed ☀ 16°░█████░30°         Thu ☀ 15°░████░░29°          │
│ Fri ☁ 15°█████░░27°         Sat ☂ 14°████░░░23° ☂ 65%    │
│ Sun ☂ 13°███░░░░22° ☂ 40%                                │
└──────────────────────────────────────────────────────────┘
                                                            
r refresh · u units · ? help · q quit                       
"
`;
